--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rummikub</title>
-    <link rel="website icon" type="png" href="https://cdn.glitch.global/3bd5bd69-164a-4d1d-bb74-72318aeea235/icon.jpg?v=1745408865121">
+    <link rel="website icon" type="png" href="icon.jpg">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
