--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rummikub</title>
-    <link rel="website icon" type="png" href="icon.jpg">
+    <link rel="website icon" type="png" href="https://cdn.glitch.global/3bd5bd69-164a-4d1d-bb74-72318aeea235/icon.jpg?v=1745408865121">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -86,7 +86,7 @@
                             <button onclick="reloadTab1(4)" class="newSystemButton" id="newSystem_1-4_Button">0</button>
                             <input onchange="calc()" maxlength="3" value="0" min="-200" max="0" class="inputSecond" id="1game4P2I" type="number"></td>
                     </tr>
-                    <tr>
+                    <tr id="Tr2">
                         <td class="bokInfo">2</td>
                             <td>
                                 <button onclick="reloadTab2(1)" class="newSystemButton" id="newSystem_2-1_Button">0</button>
@@ -105,7 +105,7 @@
                                 <input onchange="calc()" maxlength="3" value="0" min="-200" max="0" class="inputSecond" id="2game4P2I" type="number">
                             </td>
                     </tr>
-                    <tr>
+                    <tr id="Tr3">
                         <td class="bokInfo">3</td>
                             <td>
                                 <button onclick="reloadTab3(1)" class="newSystemButton" id="newSystem_3-1_Button">0</button>
@@ -120,7 +120,7 @@
                                 <button onclick="reloadTab3(4)" class="newSystemButton" id="newSystem_3-4_Button">0</button>
                                 <input onchange="calc()" maxlength="3" value="0" min="-200" max="0" class="inputSecond" id="3game4P2I" type="number"></td>
                     </tr>
-                    <tr>
+                    <tr id="Tr4">
                         <td class="bokInfo">4</td>
                             <td>
                                 <button onclick="reloadTab4(1)" class="newSystemButton" id="newSystem_4-1_Button">0</button>
@@ -135,7 +135,7 @@
                                 <button onclick="reloadTab4(4)" class="newSystemButton" id="newSystem_4-4_Button">0</button>
                                 <input onchange="calc()" maxlength="3" value="0" min="-200" max="0" class="inputSecond" id="4game4P2I" type="number"></td>
                     </tr>
-                    <tr>
+                    <tr id="Tr5">
                         <td class="bokInfo">5</td>
                         <td>
                             <button onclick="reloadTab5(1)" class="newSystemButton" id="newSystem_5-1_Button">0</button>
@@ -154,7 +154,7 @@
                             <input onchange="calc()" maxlength="3" value="0" min="-200" max="0" class="inputSecond" id="5game4P2I" type="number">
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="Tr6">
                         <td class="bokInfo">6</td>
                         <td>
                             <button onclick="reloadTab6(1)" class="newSystemButton" id="newSystem_6-1_Button">0</button>
@@ -173,7 +173,7 @@
                             <input onchange="calc()" maxlength="3" value="0" min="-200" max="0" class="inputSecond" id="6game4P2I" type="number">
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="Tr7">
                         <td class="bokInfo">7</td>
                         <td>
                             <button onclick="reloadTab7(1)" class="newSystemButton" id="newSystem_7-1_Button">0</button>
